--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
     <fieldset class="home">
         <div class="typing">
-            <h1 aria-label="Hi! I'm a developer">
+            <h1 class="topbit" aria-label="Hi! I'm a developer">
                 Hi! I'm a&nbsp;<span class="typewriter"></span>
             </h1>
         </div>
     </fieldset>
     <fieldset class="desc">
-        <p>I'm Maximilian Misiurski and I love to code in many languages 
+        <p class="description">I'm Maximilian Misiurski and I love to code in many languages 
             such as <strong>Python </strong>,<strong> HTML </strong>and <strong>CSS</strong>. 
             Some of my projects were made with a little help but most were made with no
             help at all. I also constructed this website too. Besides from coding
@@ -45,11 +45,8 @@
             acoustic and bass). I have great communication skills and I am very
             flexible when it comes to many things. Here is my cv below:</p>
     </fieldset>
-    <script>
-        window.addEventListener('DOMContentLoaded', () => {
-            const header = document.querySelector('header');
-            header.classList.add('show');
-        });
-    </script>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#31eeb9" fill-opacity="1" d="M0,128L60,149.3C120,171,240,213,360,197.3C480,181,600,107,720,85.3C840,64,960,96,1080,90.7C1200,85,1320,43,1380,21.3L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+    
+    <script src="scripts.js"></script>
 </body>
 </html>
