--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
@@ -25,14 +26,15 @@
             </ul>
         </nav>
         <div class="navbuttons">
-            <button>Projects</button>
+            <button><a href="#projects">Projects</a></button>
         </div>
     </header>
 
-    <fieldset class="home">
+    <fieldset id="home" class="home">
         <div class="typing">
             <h1 class="topbit" aria-label="Hi! I'm a developer">
                 Hi! I'm a&nbsp;<span class="typewriter"></span>
+                <img src="robot.png" alt="Robot" class="robot-image"> <!-- Added image here -->
             </h1>
         </div>
     </fieldset>
@@ -43,10 +45,142 @@
             help at all. I also constructed this website too. Besides from coding
             in my spare time, I love to play on the piano and guitar (both electric,
             acoustic and bass). I have great communication skills and I am very
-            flexible when it comes to many things. Here is my cv below:</p>
+            flexible when it comes to many things.</p>
     </fieldset>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#31eeb9" fill-opacity="1" d="M0,128L60,149.3C120,171,240,213,360,197.3C480,181,600,107,720,85.3C840,64,960,96,1080,90.7C1200,85,1320,43,1380,21.3L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
-    
+    <img id="projects" src="wave.png" alt="split">
+    <div class="section2">
+        <h1 class="projects-title">Projects</h1>
+        <p>Here are a list of some of my best projects. These will come with
+            the source code so any of you can check out how I made these things or 
+            get inspired to do similar projects to what I have done! Make sure 
+            to check the ones with a golden outline too as these are my current 
+            best products...
+        </p>
+        <div id="pricing" class="card-section">
+            <div class="page-content">
+                <div class="card">
+                    <div class="overlay"></div>
+                    <div class="content">
+                        <div class="title">Mouse Original Website</div>
+                        <div class="copy">
+                            This website was one of my best websites. It has a
+                            glowing blue theme and has amazing cards that I'm also
+                            using for this section. This was one of my freeCodeCamp 
+                            projects and I think it turned out pretty well. Click 
+                            the buttons below to check the website out and see the 
+                            source code: 
+                        </div>
+                        <a href="https://maxthecoder123.github.io/Product-Landing-Page/" target="_blank"><button class="btn btn-left">View Project</button></a>
+                        <a href="https://github.com/Maxthecoder123/freeCodeCamp-Work/tree/main/Responsive%20Web%20Design/Product%20Landing%20Page" target="_blank"><button class="btn btn-right">Source Code</button></a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="overlay"></div>
+                    <div class="content">
+                        <div class="title">Documentation Page</div>
+                        <div class="copy">
+                            This was one of the first websites that I made. It talk about c++ 
+                            (I dont know anything about this language so I learned a lot from this too).
+                            From this project I learning lots about c++ and I made this website have 
+                            lots of detail for people to have a look at. Click 
+                            the buttons below to check the website out and see the 
+                            source code: 
+                        </div>
+                        <a href="https://maxthecoder123.github.io/Documentation-Page/" target="_blank"><button class="btn btn-left">View Project</button></a>
+                        <a href="https://github.com/Maxthecoder123/Documentation-Page" target="_blank"><button class="btn btn-right">Source Code</button></a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="overlay"></div>
+                    <div class="content">
+                        <div class="title">Survey Form</div>
+                        <div class="copy">
+                            This was my first project that I did by myself. I think that It came out realy well! It has a nice colour 
+                            scheme and layout and I'm quite proud of how it turned out in the long run. Click 
+                            the buttons below to check the website out and see the 
+                            source code: 
+                        </div>
+                        <a href="https://maxthecoder123.github.io/Survey-Form/" target="_blank"><button class="btn btn-left">View Project</button></a>
+                        <a href="https://github.com/Maxthecoder123/Survey-Form" target="_blank"><button class="btn btn-right">Source Code</button></a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="overlay"></div>
+                    <div class="content">
+                        <div class="title">CSS Cat Painting</div>
+                        <div class="copy">
+                            This cat may be easy to implement, just slap a image and your done right? Well, thats not the case here as the whole cat 
+                            was made using div's and css code only and no images whatsoever!! Click 
+                            the buttons below to check the website out and see the 
+                            source code:
+                        </div>
+                        <a href="https://maxthecoder123.github.io/Cat-Painting/" target="_blank"><button class="btn btn-left">View Project</button></a>
+                        <a href="https://github.com/Maxthecoder123/Cat-Painting" target="_blank"><button class="btn btn-right">Source Code</button></a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="overlay"></div>
+                    <div class="content">
+                        <div class="title">Space Game</div>
+                        <div class="copy">
+                            This is probably my best python code! It's a Space theme shooter and very fun to play. I recommend you 
+                            to download the source code and play from there since playing on the web drops the games fps by a bit! Click 
+                            the buttons below to check the game out and see the 
+                            source code:
+                        </div>
+                        <a href="https://replit.com/@maxlogin69/Space-Rush" target="_blank"><button class="btn btn-left">View Project</button></a>
+                        <a href="https://github.com/Maxthecoder123/Space-Rush" target="_blank"><button class="btn btn-right">Source Code</button></a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="overlay"></div>
+                    <div class="content">
+                        <div class="title">Flappy Bird</div>
+                        <div class="copy">
+                            A classic game that I have made! It's very fun and addicting to play and I loved making it. I recommend you 
+                            to download the source code and play from there since playing on the web drops the games fps by a bit and
+                             the pipe generation is a bit messy! Click 
+                            the buttons below to check the game out and see the 
+                            source code:
+                        </div>
+                        <a href="https://replit.com/@maxlogin69/Flappy-Bird" target="_blank"><button class="btn btn-left">View Project</button></a>
+                        <a href="https://github.com/Maxthecoder123/Flappy-Bird" target="_blank"><button class="btn btn-right">Source Code</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a href="https://github.com/Maxthecoder123/All-Projects" target="_blank"><button class="see-all">See all</button></a>
+    </div>
+    <img id="about" src="wave.png" alt="split" class="rotate">
+    <div class="section3">
+        <h1 class="about-me-title">About Me</h1>
+        <p class="about-me-desc">Ok let's now go and see how this all started:</p>
+        <div class="about-me">
+            <p class="text">I'm Maximilian Misiurski and I love to code in many languages such as <strong>Python</strong>, <strong>HTML</strong>, and <strong>CSS</strong>. Some of my projects were made with a little help but most were made with no help at all. I also constructed this website too. Besides coding in my spare time, I love to play the piano and guitar (both electric, acoustic, and bass). I have great communication skills and I am very flexible when it comes to many things.</p>
+        </div>
+    </div>
+    <img src="wave2.png" alt="split">
+    <footer id="contact">
+        <div class="footer-content">
+            <p>&copy; 2024 Max The Coder. All rights reserved.</p>
+            <div class="footer-links">
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#contact">Contact</a>
+            </div>
+            <div class="contact-info">
+                <div class="phone">
+                    <i class='bx bx-phone'></i>
+                    <span>+44 7440 407456</span>
+                </div>
+                <div class="email">
+                    <i class='bx bx-envelope'></i>
+                    <span>maxthecoder123@gmail.com</span>
+                </div>
+            </div>
+        </div>
+        
+    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
