Changed Website so its now upgraded

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="logo">
             <a href="#home">
-                <img id="logo" src="logo.jpg" alt="Logo">
+                <img id="logo" src="Other Images/logo.jpg" alt="Logo">
             </a>
         </div>
         <nav class="navbar">
@@ -26,7 +26,7 @@
             </ul>
         </nav>
         <div class="navbuttons">
-            <button><a href="#projects">Projects</a></button>
+            <button><a href="see-all.html">Projects</a></button>
         </div>
     </header>
 
@@ -34,7 +34,7 @@
         <div class="typing">
             <h1 class="topbit" aria-label="Hi! I'm a developer">
                 Hi! I'm a&nbsp;<span class="typewriter"></span>
-                <img src="robot.png" alt="Robot" class="robot-image"> <!-- Added image here -->
+                <img src="Other Images/robot.png" alt="Robot" class="robot-image"> <!-- Added image here -->
             </h1>
         </div>
     </fieldset>
@@ -47,7 +47,7 @@
             acoustic and bass). I have great communication skills and I am very
             flexible when it comes to many things.</p>
     </fieldset>
-    <img id="projects" src="wave.png" alt="split">
+    <img id="projects" src="Other Images/wave.png" alt="split">
     <div class="section2">
         <h1 class="projects-title">Projects</h1>
         <p>Here are a list of some of my best projects. These will come with
@@ -149,17 +149,21 @@
                 </div>
             </div>
         </div>
-        <a href="https://github.com/Maxthecoder123/All-Projects" target="_blank"><button class="see-all">See all</button></a>
+        <a href="see-all.html"><button class="see-all">See all</button></a>
     </div>
-    <img id="about" src="wave.png" alt="split" class="rotate">
+    <img id="about" src="Other Images/wave.png" alt="split" class="rotate">
     <div class="section3">
         <h1 class="about-me-title">About Me</h1>
         <p class="about-me-desc">Ok let's now go and see how this all started:</p>
         <div class="about-me">
-            <p class="text">I'm Maximilian Misiurski and I love to code in many languages such as <strong>Python</strong>, <strong>HTML</strong>, and <strong>CSS</strong>. Some of my projects were made with a little help but most were made with no help at all. I also constructed this website too. Besides coding in my spare time, I love to play the piano and guitar (both electric, acoustic, and bass). I have great communication skills and I am very flexible when it comes to many things.</p>
+            <p class="text">I'm <strong>Maximilian Misiurski</strong>, a passionate developer with a love for coding in languages like <strong>Python, HTML, and CSS</strong>. I enjoy the challenge of building projects, whether they are solo ventures or ones where I’ve received a bit of guidance along the way. In fact, I’m proud to have constructed this website myself!
+
+                Beyond coding, I'm also a musician. I play the <strong>piano</strong> and <strong>guitar</strong> (electric, acoustic, and bass), and I find music to be a great balance to my coding endeavors. With strong <strong>communication skills</strong> and a high level of <strong>flexibility</strong>, I excel in both collaborative and independent work environments. My ability to adapt quickly to new challenges allows me to continuously grow and expand my skill set.
+                
+                Whether I’m writing clean code, crafting smooth melodies, or working on creative projects, I'm always striving to learn and improve.</p>
         </div>
     </div>
-    <img src="wave2.png" alt="split">
+    <img src="Other Images/wave2.png" alt="split">
     <footer id="contact">
         <div class="footer-content">
             <p>&copy; 2024 Max The Coder. All rights reserved.</p>
