Adding portfolio to the projects

--- a/see-all.html
+++ b/see-all.html
@@ -38,6 +38,24 @@
         <div class="card">
           <div class="card__image-container">
             <img
+              src="Projects Images/SEE-ALL/portfolio.png"
+            />
+          </div>
+          <div class="card__content">
+            <p class="card__title text--medium">
+              Portfolio
+            </p>
+            <div class="card__info">
+              <p class="text--medium">HTML + CSS + JS</p>
+              <a href="https://github.com/Maxthecoder123/maxthecoder123.github.io" class="button">
+                <p class="card__price text--medium">Source Code</p>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card__image-container">
+            <img
               src="Projects Images/SEE-ALL/flappy-bird.png"
             />
           </div>
