--- a/see-all.html
+++ b/see-all.html
@@ -43,7 +43,7 @@
           </div>
           <div class="card__content">
             <p class="card__title text--medium">
-              JS Pyramid Generator
+              Java Script Pyramid Generator
             </p>
             <div class="card__info">
               <p class="text--medium">JS</p>
