--- a/see-all.html
+++ b/see-all.html
@@ -38,7 +38,7 @@
         <div class="card">
           <div class="card__image-container">
             <img
-              src="Projects Images/SEE-ALL/js-pyramid.png"
+              src="Projects Images/SEE-ALL/pyramid.png"
             />
           </div>
           <div class="card__content">
