--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
         <h1 class="projects-title">Projects</h1>
         <p>Here are a list of some of my best projects. These will come with
             the source code so any of you can check out how I made these things or 
-            get inspired to do similar projects to what I have done! Make sure 
-            to check the ones with a golden outline too as these are my current 
-            best products...
+            get inspired to do similar projects to what I have done! Also, click the see all button below to check out all of my best projects! Enjoy...
         </p>
         <div id="pricing" class="card-section">
             <div class="page-content">
