Upgraded the Portfolio so now its 20x better!

--- a/new-portfolio/python.html
+++ b/new-portfolio/python.html
@@ -20,7 +20,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-              <img id="logo" src="Other Images/logo.jpg" alt="Logo">
+              <img id="logo" src="Other Images/logo.png" alt="Logo">
             </a>
         </div>
         <nav class="navbar">
@@ -29,48 +29,12 @@
             </ul>
         </nav>
         <div class="navbuttons">
-            <button><a href="index.html">Back</a></button>
+            <button><a href="index.html#section2">Back</a></button>
         </div>
     </header>
     <div class="space"></div>
     <main>
       <section class="cards">
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/pyramid.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              Java Script Pyramid Generator
-            </p>
-            <div class="card__info">
-              <p class="text--medium">JS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/JS%20(New)" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/portfolio.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              Portfolio
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS + JS</p>
-              <a href="https://github.com/Maxthecoder123/maxthecoder123.github.io" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
         <div class="card">
           <div class="card__image-container">
             <img
@@ -282,258 +246,6 @@
             <div class="card__info">
               <p class="text--medium">Python</p>
               <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/Python%20(New)/Stack%20Operations" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/cat-painting.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              CSS Cat Painting
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/Building%20a%20Cat%20Painting" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/city-skyline.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              CSS City Skyline
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/Building%20a%20City%20Skyline" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/nutrition-label.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              CSS Nutrition Label
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/Building%20a%20Nutrition%20Label" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/piano.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              CSS Piano
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/Building%20a%20Piano" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/quiz.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              Quiz
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/Building%20a%20Quiz" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/balance-sheet.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              Balance Sheet
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/Bulding%20a%20Balance%20sheet" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/cafe-menu.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              Cafe Menu
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/Cafe%20Menu" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/colour-markers.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              CSS Colour Markers
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/CSS%20Colour%20Markers" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/gallery.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              CSS Photo Gallery
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/CSS%20Flexbox%20Photo%20Gallery" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/product-landing.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              Product Landing Page
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/Product%20Landing%20Page" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/registration-form.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              Registration Form
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/Registration%20Form" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/survey-form.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              Survey Form
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/Survey%20Form" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/documentation.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              Technical Documentation Page
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/Technical%20Documentation%20Page" class="button">
-                <p class="card__price text--medium">Source Code</p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__image-container">
-            <img
-              src="Projects Images/SEE-ALL/tribute.png"
-            />
-          </div>
-          <div class="card__content">
-            <p class="card__title text--medium">
-              Tribute Page
-            </p>
-            <div class="card__info">
-              <p class="text--medium">HTML + CSS</p>
-              <a href="https://github.com/Maxthecoder123/All-Projects/tree/main/New/HTML%20%2B%20CSS%20(New)/Tribute%20Page" class="button">
                 <p class="card__price text--medium">Source Code</p>
               </a>
             </div>
